<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.NetworkConnectivityCheckFragment">

<TextView
    android:id="@+id/textView"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/ncc_server_use_description"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<EditText
    android:id="@+id/editTextTextServerUrlHttp"
    android:layout_width="0dp"
    android:layout_height="45dp"
    android:ems="10"
    android:hint="@string/ncc_server_url_http_hint"
    android:inputType="textUri"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textViewReliabilityStatus" />
<EditText
    android:id="@+id/editTextTextServerUrlHttps"
    android:layout_width="0dp"
    android:layout_height="45dp"
    android:ems="10"
    android:hint="@string/ncc_server_url_https_hint"
    android:inputType="textUri"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextTextServerUrlHttp" />

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recycleViewServersList"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView3"
    tools:listitem="@layout/recycler_view_item_ncc_server" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:text="@string/known_servers_header"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/buttonSaveSettings" />

<TextView
    android:id="@+id/textView3"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/known_server_description"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView2" />

<Button
    android:id="@+id/buttonSaveSettings"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/save_settings"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextTextServerUrlHttps" />

<Button
    android:id="@+id/buttonLoad"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:text="@string/load_settings"
    app:layout_constraintEnd_toStartOf="@+id/buttonSaveSettings"
    app:layout_constraintTop_toTopOf="@+id/buttonSaveSettings" />

<TextView
    android:id="@+id/textViewReliabilityStatus"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:textStyle="italic"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>